samples/_failures_safe/1761403943_0be0e8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54e98f9f.c: In function ‘main’:
./samples/SAFE/__tmp_54e98f9f.c:147:44: error: expected ‘)’ at end of input
  147 |                 printf("%s %-8s %s\n", logs
      |                       ~                    ^
      |                                            )
./samples/SAFE/__tmp_54e98f9f.c:147:17: error: expected declaration or statement at end of input
  147 |                 printf("%s %-8s %s\n", logs
      |                 ^~~~~~
./samples/SAFE/__tmp_54e98f9f.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54e98f9f.c:147:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_54e98f9f.c:147:17: error: expected declaration or statement at end of input
